src/pyautoeios/lib/headers/EIOS.hxx

typedef struct EIOS
{
    std::int32_t pid;
	std::int32_t width;
    std::int32_t height;
	std::intptr_t local_storage;
    std::unique_ptr<ControlCenter> control_center;
} EIOS;
EXPORT [[gnu::stdcall]] void EIOS_GetMousePosition(EIOS* eios, std::int32_t* x, std::int32_t* y) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_GetRealMousePosition(EIOS* eios, std::int32_t* x, std::int32_t* y) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_MoveMouse(EIOS* eios, std::int32_t x, std::int32_t y) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_HoldMouse(EIOS* eios, std::int32_t x, std::int32_t y, std::int32_t button) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_ReleaseMouse(EIOS* eios, std::int32_t x, std::int32_t y, std::int32_t button) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_ScrollMouse(EIOS* eios, std::int32_t x, std::int32_t y, std::int32_t lines) noexcept;
EXPORT [[gnu::stdcall]] bool EIOS_IsMouseButtonHeld(EIOS* eios, std::int32_t button) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_SendString(EIOS* eios, const char* string, std::int32_t keywait, std::int32_t keymodwait) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_HoldKey(EIOS* eios, std::int32_t key) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_ReleaseKey(EIOS* eios, std::int32_t key) noexcept;
EXPORT [[gnu::stdcall]] bool EIOS_IsKeyHeld(EIOS* eios, std::int32_t key) noexcept;
EXPORT [[gnu::stdcall]] std::int32_t EIOS_GetKeyboardSpeed(EIOS* eios) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_SetKeyboardSpeed(EIOS* eios, std::int32_t speed) noexcept;
EXPORT [[gnu::stdcall]] std::int32_t EIOS_GetKeyboardRepeatDelay(EIOS* eios) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_SetKeyboardRepeatDelay(EIOS* eios, std::int32_t delay) noexcept;
EXPORT [[gnu::stdcall]] EIOS* EIOS_PairClient(pid_t pid) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_KillClientPID(pid_t pid) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_KillClient(EIOS* eios) noexcept;
EXPORT [[gnu::stdcall]] void EIOS_KillZombieClients() noexcept;
EXPORT [[gnu::stdcall]] std::size_t EIOS_GetClients(bool unpaired_only) noexcept;
EXPORT [[gnu::stdcall]] pid_t EIOS_GetClientPID(std::size_t index) noexcept;
EXPORT void EIOS_GetMousePosition(EIOS* eios, std::int32_t* x, std::int32_t* y) noexcept;
EXPORT void EIOS_GetRealMousePosition(EIOS* eios, std::int32_t* x, std::int32_t* y) noexcept;
EXPORT void EIOS_MoveMouse(EIOS* eios, std::int32_t x, std::int32_t y) noexcept;
EXPORT void EIOS_HoldMouse(EIOS* eios, std::int32_t x, std::int32_t y, std::int32_t button) noexcept;
EXPORT void EIOS_ReleaseMouse(EIOS* eios, std::int32_t x, std::int32_t y, std::int32_t button) noexcept;
EXPORT void EIOS_ScrollMouse(EIOS* eios, std::int32_t x, std::int32_t y, std::int32_t lines) noexcept;
EXPORT bool EIOS_IsMouseButtonHeld(EIOS* eios, std::int32_t button) noexcept;
EXPORT void EIOS_SendString(EIOS* eios, const char* string, std::int32_t keywait, std::int32_t keymodwait) noexcept;
EXPORT void EIOS_HoldKey(EIOS* eios, std::int32_t key) noexcept;
EXPORT void EIOS_ReleaseKey(EIOS* eios, std::int32_t key) noexcept;
EXPORT bool EIOS_IsKeyHeld(EIOS* eios, std::int32_t key) noexcept;
EXPORT std::int32_t EIOS_GetKeyboardSpeed(EIOS* eios) noexcept;
EXPORT void EIOS_SetKeyboardSpeed(EIOS* eios, std::int32_t speed) noexcept;
EXPORT std::int32_t EIOS_GetKeyboardRepeatDelay(EIOS* eios) noexcept;
EXPORT void EIOS_SetKeyboardRepeatDelay(EIOS* eios, std::int32_t delay) noexcept;
EXPORT EIOS* EIOS_PairClient(pid_t pid) noexcept;
EXPORT void EIOS_KillClientPID(pid_t pid) noexcept;
EXPORT void EIOS_KillClient(EIOS* eios) noexcept;
EXPORT void EIOS_KillZombieClients() noexcept;
EXPORT std::size_t EIOS_GetClients(bool unpaired_only) noexcept;
EXPORT pid_t EIOS_GetClientPID(std::size_t index) noexcept;