src/pyautoeios/lib/headers/Plugin.hxx

EXPORT void EIOS_Inject(const char* process_name) noexcept;
EXPORT void EIOS_Inject_PID(std::int32_t pid) noexcept;
EXPORT EIOS* Reflect_GetEIOS(std::int32_t pid) noexcept;
EXPORT jobject Reflect_Object(EIOS* eios, jobject object, const char* cls, const char* field, const char* desc) noexcept;
EXPORT jboolean Reflect_IsSame_Object(EIOS* eios, jobject first, jobject second) noexcept;
EXPORT jboolean Reflect_InstanceOf(EIOS* eios, jobject object, const char* cls) noexcept;
EXPORT void Reflect_Release_Object(EIOS* eios, jobject object) noexcept;
EXPORT void Reflect_Release_Objects(EIOS* eios, jobject* objects, std::size_t amount) noexcept;
EXPORT bool Reflect_Bool(EIOS* eios, jobject object, const char* cls, const char* field, const char* desc) noexcept;