src/pyautoeios/eios.py


        void EIOS_GetMousePosition(
            EIOS* eios, std::int32_t* x, std::int32_t* y
        ) noexcept;
        """
        x = ctypes.c_int32()
        y = ctypes.c_int32()
        self._stdcall.EIOS_GetMousePosition(
            self._eios_ptr, ctypes.byref(x), ctypes.byref(y)
        )
        return (x.value, y.value)

    _stdcall.EIOS_GetRealMousePosition.restype = None
    _stdcall.EIOS_GetRealMousePosition.argtypes = [EIOSPtr, IntPtr, IntPtr]

    def _EIOS_GetRealMousePosition(self) -> Tuple[int, int]:
        """Wrap EIOS_GetRealMousePosition.

        void EIOS_GetRealMousePosition(
            EIOS* eios, std::int32_t* x, std::int32_t* y
        ) noexcept;
        """
        x = ctypes.c_int32()
        y = ctypes.c_int32()
        self._stdcall.EIOS_GetRealMousePosition(
            self._eios_ptr, ctypes.byref(x), ctypes.byref(y)
        )
        return (x.value, y.value)

    _stdcall.EIOS_MoveMouse.restype = None
    _stdcall.EIOS_MoveMouse.argtypes = [EIOSPtr, Coordinate, Coordinate]

    def _EIOS_MoveMouse(self, x: int, y: int) -> None:
        """Wrap EIOS_MoveMouse.

        void EIOS_MoveMouse(
            EIOS* eios, std::int32_t x, std::int32_t y
        ) noexcept;
        """
        self._stdcall.EIOS_MoveMouse(self._eios_ptr, x, y)

    _stdcall.EIOS_HoldMouse.restype = None
    _stdcall.EIOS_HoldMouse.argtypes = [EIOSPtr, Coordinate, Coordinate, ctypes.c_int32]

    def _EIOS_HoldMouse(self, x: int, y: int, button: int) -> None:
        """Wrap EIOS_HoldMouse.

        void EIOS_HoldMouse(
            EIOS* eios, std::int32_t x, std::int32_t y, std::int32_t button
        ) noexcept;
        """
        self._stdcall.EIOS_HoldMouse(self._eios_ptr, x, y, button)

    _stdcall.EIOS_ReleaseMouse.restype = None
    _stdcall.EIOS_ReleaseMouse.argtypes = [EIOSPtr, Coordinate, Coordinate, MouseButton]

    def _EIOS_ReleaseMouse(self, x: int, y: int, button: int) -> None:
        """Wrap EIOS_ReleaseMouse.

        void EIOS_ReleaseMouse(
            EIOS* eios, std::int32_t x, std::int32_t y, std::int32_t button
        ) noexcept;
        """
        self._stdcall.EIOS_ReleaseMouse(self._eios_ptr, x, y, button)

    _stdcall.EIOS_ScrollMouse.restype = None
    _stdcall.EIOS_ScrollMouse.argtypes = [EIOSPtr, Coordinate, Coordinate, MouseButton]

    def _EIOS_ScrollMouse(self, x: int, y: int, lines: int) -> None:
        """Wrap EIOS_ScrollMouse.

        void EIOS_ScrollMouse(
            EIOS* eios, std::int32_t x, std::int32_t y, std::int32_t lines
        ) noexcept;
        """
        self._stdcall.EIOS_ScrollMouse(self._eios_ptr, x, y, lines)

    # TODO: EIOS_IsMouseButtonHeld appears to be missing form the DLL???
    # always throws a `AttributeError: function 'EIOS_IsMouseButtonHeld' not found` ERROR

    # _stdcall.EIOS_IsMouseButtonHeld.restype = ctypes.c_bool
    # _stdcall.EIOS_IsMouseButtonHeld.argtypes = [EIOSPtr, MouseButton]

    def _EIOS_IsMouseButtonHeld(self, button: int) -> bool:
        """Wrap EIOS_IsMouseButtonHeld.

        TODO:
            this appears to be missing from the DLL.
                adding the restype and argtype assignments throws a
                "function doesn't exist" error

        bool EIOS_IsMouseButtonHeld(
            EIOS* eios, std::int32_t button
        ) noexcept;
        """
        raise NotImplementedError(
            "EIOS_IsMouseButtonHeld appears to be missing form the DLL"
        )
        # return self._stdcall.EIOS_IsMouseButtonHeld(self._eios_ptr, button)

    _stdcall.EIOS_SendString.restype = None
    _stdcall.EIOS_SendString.argtypes = [EIOSPtr, cstr, ctypes.c_int32, ctypes.c_int32]

    def _EIOS_SendString(self, text: str, keywait: int, keymodwait: int) -> None:
        """Wrap EIOS_SendString.

        void EIOS_SendString(
            EIOS* eios, const char* string, std::int32_t keywait, std::int32_t keymodwait
        ) noexcept;
        """
        _text = bytes(text, encoding="utf8")
        self._stdcall.EIOS_SendString(self._eios_ptr, _text, keywait, keymodwait)

    _stdcall.EIOS_HoldKey.restype = None
    _stdcall.EIOS_HoldKey.argtypes = [EIOSPtr, KeyCode]

    def _EIOS_HoldKey(self, key: int) -> None:
        """Wrap EIOS_HoldKey.

        void EIOS_HoldKey(
            EIOS* eios, std::int32_t key
        ) noexcept;
        """
        self._stdcall.EIOS_HoldKey(self._eios_ptr, key)

    _stdcall.EIOS_ReleaseKey.restype = None
    _stdcall.EIOS_ReleaseKey.argtypes = [EIOSPtr, KeyCode]

    def _EIOS_ReleaseKey(self, key: int) -> None:
        """Wrap EIOS_ReleaseKey.

        void EIOS_ReleaseKey(
            EIOS* eios, std::int32_t key
        ) noexcept;
        """
        self._stdcall.EIOS_ReleaseKey(self._eios_ptr, key)

    _stdcall.EIOS_IsKeyHeld.restype = ctypes.c_bool
    _stdcall.EIOS_IsKeyHeld.argtypes = [EIOSPtr, KeyCode]

    def _EIOS_IsKeyHeld(self, key: int) -> bool:
        """Wrap EIOS_IsKeyHeld.

        bool EIOS_IsKeyHeld(
            EIOS* eios, std::int32_t key
        ) noexcept;
        """
        return self._stdcall.EIOS_IsKeyHeld(self._eios_ptr, key)

    _stdcall.EIOS_GetKeyboardSpeed.restype = ctypes.c_int32
    _stdcall.EIOS_GetKeyboardSpeed.argtypes = [EIOSPtr]

    def _EIOS_GetKeyboardSpeed(self) -> int:
        """Wrap EIOS_GetKeyboardSpeed.

        std::int32_t EIOS_GetKeyboardSpeed(
            EIOS* eios
        ) noexcept;
        """
        return self._stdcall.EIOS_GetKeyboardSpeed(self._eios_ptr)

    _stdcall.EIOS_SetKeyboardSpeed.restype = None
    _stdcall.EIOS_SetKeyboardSpeed.argtypes = [EIOSPtr, ctypes.c_int32]

    def _EIOS_SetKeyboardSpeed(self, speed: int) -> None:
        """Wrap EIOS_SetKeyboardSpeed.

        void EIOS_SetKeyboardSpeed(
            EIOS* eios,
            std::int32_t speed
        ) noexcept;
        """
        self._stdcall.EIOS_SetKeyboardSpeed(self._eios_ptr, speed)

    _stdcall.EIOS_GetKeyboardRepeatDelay.restype = ctypes.c_int32
    _stdcall.EIOS_GetKeyboardRepeatDelay.argtypes = [EIOSPtr]

    def _EIOS_GetKeyboardRepeatDelay(self) -> int:
        """Wrap EIOS_GetKeyboardRepeatDelay.

        std::int32_t EIOS_GetKeyboardRepeatDelay(
            EIOS* eios
        ) noexcept;
        """
        return self._stdcall.EIOS_GetKeyboardRepeatDelay(self._eios_ptr)

    _stdcall.EIOS_SetKeyboardRepeatDelay.restype = None
    _stdcall.EIOS_SetKeyboardRepeatDelay.argtypes = [EIOSPtr, ctypes.c_int32]

    def _EIOS_SetKeyboardRepeatDelay(self, delay: int) -> None:
        """Wrap EIOS_SetKeyboardRepeatDelay.

        void EIOS_SetKeyboardRepeatDelay(
            EIOS* eios,
            std::int32_t delay
        ) noexcept;
        """
        self._stdcall.EIOS_SetKeyboardRepeatDelay(self._eios_ptr, delay)

    _stdcall.EIOS_PairClient.restype = EIOSPtr
    _stdcall.EIOS_PairClient.argtypes = [PID]

    def _EIOS_PairClient(self, pid: int) -> EIOSPtr:
        """Wrap EIOS_PairClient.

        EIOS* EIOS_PairClient(
            pid_t pid
        ) noexcept;
        """
        return self._stdcall.EIOS_PairClient(pid)

    _stdcall.EIOS_KillClientPID.restype = None
    _stdcall.EIOS_KillClientPID.argtypes = [PID]

    def _EIOS_KillClientPID(self, pid: int) -> None:
        """Wrap EIOS_KillClientPID.

        void EIOS_KillClientPID(
            pid_t pid
        ) noexcept;
        """
        self._stdcall.EIOS_KillClientPID(pid)

    _stdcall.EIOS_KillClient.restype = None
    _stdcall.EIOS_KillClient.argtypes = [EIOSPtr]

    def _EIOS_KillClient(self) -> None:
        """Wrap EIOS_KillClient.

        void EIOS_KillClient(
            EIOS* eios
        ) noexcept;
        """
        self._stdcall.EIOS_KillClient(self._eios_ptr)

    _stdcall.EIOS_KillZombieClients.restype = None
    _stdcall.EIOS_KillZombieClients.argtypes = []

    def _EIOS_KillZombieClients(self) -> None:
        """Wrap EIOS_KillZombieClients.

        void EIOS_KillZombieClients() noexcept;
        """
        self._stdcall.EIOS_KillZombieClients(self._eios_ptr)

    _stdcall.EIOS_GetClients.restype = ctypes.c_size_t
    _stdcall.EIOS_GetClients.argtypes = [ctypes.c_bool]

    def _EIOS_GetClients(self, unpaired_only: bool = False) -> int:
        """Wrap EIOS_GetClients.

        std::size_t EIOS_GetClients(bool unpaired_only) noexcept;

        Args:
            unpaired_only: Whether retrict to only unparied clients or all clients

        Return:
            number of clients
        """
        return self._stdcall.EIOS_GetClients(unpaired_only)

    _stdcall.EIOS_GetClientPID.restype = PID
    _stdcall.EIOS_GetClientPID.argtypes = [ctypes.c_size_t]

    def _EIOS_GetClientPID(self, index: int) -> int:
        """Wrap EIOS_GetClientPID.

        pid_t EIOS_GetClientPID(
            std::size_t index
        ) noexcept;
        """
        return self._stdcall.EIOS_GetClientPID(index)

    _cdecl.EIOS_Inject.restype = None
    _cdecl.EIOS_Inject.argtypes = [cstr]

    def _EIOS_Inject(self, process_name: str = "JagexLauncher.exe") -> None:
        """Wrap EIOS_Inject.

        void EIOS_Inject(const
        char* process_name
        ) noexcept;
        """
        self._cdecl.EIOS_Inject(process_name.encode("utf8"))

    _cdecl.EIOS_Inject_PID.restype = None
    _cdecl.EIOS_Inject_PID.argtypes = [PID]

    def _EIOS_Inject_PID(self, pid: int) -> None:
        """Wrap EIOS_Inject_PID.

        void EIOS_Inject_PID(
            std::int32_t pid
        ) noexcept;
        """
        self._cdecl.EIOS_Inject_PID(pid)

    _cdecl.Reflect_GetEIOS.restype = EIOSPtr
    _cdecl.Reflect_GetEIOS.argtypes = [PID]

    def _Reflect_GetEIOS(self, pid: int) -> EIOSPtr:
        """Wrap Reflect_GetEIOS.

        EIOS* Reflect_GetEIOS(
            std::int32_t pid
        ) noexcept;
        """
        return self._stdcall.Reflect_GetEIOS(pid)

    _stdcall.Reflect_Object.restype = JObject
    _stdcall.Reflect_Object.argtypes = [
        EIOSPtr,
        JObject,
        cstr,
        cstr,
        cstr,
    ]

    def _Reflect_Object(self, jobject: JObject, hook: THook):
        """Wrap Reflect_Object.

        jobject Reflect_Object(
            EIOS* eios,
            jobject object,
            const char* cls,
            const char* field,
            const char* desc
        ) noexcept;
        """
        return self._stdcall.Reflect_Object(
            self._eios_ptr, jobject, hook.cls, hook.field, hook.desc
        )

    def _Reflect_IsSame_Object(self, first: JObject, second: JObject):
        """Wrap Reflect_IsSame_Object.

        jboolean Reflect_IsSame_Object(
            EIOS* eios, jobject first, jobject second
        ) noexcept;
        """
        raise NotImplementedError

    def _Reflect_InstanceOf(self, jobject: JObject, cls_name: str):
        """Wrap Reflect_InstanceOf.

        jboolean Reflect_InstanceOf(
            EIOS* eios, jobject object, const char* cls
        ) noexcept;
        """
        raise NotImplementedError

    _stdcall.Reflect_Release_Object.restype = None
    _stdcall.Reflect_Release_Object.argtypes = [EIOSPtr, JObject]

    def _Reflect_Release_Object(self, jobject: JObject):
        """Wrap Reflect_Release_Object.

        void Reflect_Release_Object(
            EIOS* eios, jobject object
        ) noexcept;
        """
        self._stdcall.Reflect_Release_Object(self._eios_ptr, jobject)

    def _Reflect_Release_Objects(self, objects, amount: int):
        """Wrap Reflect_Release_Objects.

        void Reflect_Release_Objects(
            EIOS* eios,
            jobject* objects,
            std::size_t amount
        ) noexcept;
        """
        raise NotImplementedError

    _stdcall.Reflect_Bool.restype = ctypes.c_bool
    _stdcall.Reflect_Bool.argtypes = [
        EIOSPtr,
        JObject,
        cstr,
        cstr,
        cstr,
    ]

    def _Reflect_Bool(self, jobject: JObject, hook: THook) -> bool:
        """Wrap Reflect_Bool.
